--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "marvel",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://WolfHunter151.github.io/WolfHunter151.github.io/",
+  "homepage":"https://WolfHunter151.github.io/MarvelProjInfo/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
